# astragauge

./: .editorconfig  .eslintignore  .gitignore  .prettierignore  .prettierrc  .rustfmt.toml  AGENTS.md  Cargo.toml  LICENSE  README.md  clippy.toml  eslint.config.js  prek.toml
.github/workflows/: ci.yml  opencode.yml
apps/desktop/: AGENTS.md  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  (+1 more)
crates/binding-engine/: Cargo.toml
crates/binding-engine/src/: aggregation.rs  engine.rs  lib.rs  subscription.rs  transform.rs  types.rs
crates/binding-engine/tests/: integration_tests.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs  panel.rs  provider.rs  sensor.rs  theme.rs  validation.rs  widget.rs
crates/provider-host/: Cargo.toml
crates/provider-host/src/: config.rs  error.rs  health.rs  host.rs  lib.rs  provider.rs
crates/provider-host/tests/: host_tests.rs
crates/provider-host/tests/common/: mod.rs
crates/providers/: Cargo.toml
crates/providers/src/: lib.rs  linux.rs  mock.rs
crates/providers/tests/: linux_tests.rs
crates/sensor-store/: Cargo.toml
crates/sensor-store/src/: error.rs  history.rs  lib.rs  pattern.rs  store.rs  subscription.rs
docs/: AGENTS.md  README.md
docs/architecture/: overview.md  panel-editor.md  runtime.md
docs/development/: provider-guidelines.md  widget-guidelines.md
docs/project/: branding.md  design-system.md
docs/specs/: binding-engine.md  panel-format.md  provider-packaging.md  sensor-schema.md  sensor-store.md  theme-spec.md  widget-manifest.md
(+5 files in other folders)
