[package]
name = "astragauge-provider-host"
version = "0.1.0"
edition = "2021"

[dependencies]
astragauge-domain = { path = "../domain" }
astragauge-sensor-store = { path = "../sensor-store" }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tracing = "0.1"
futures = "0.3"

[dev-dependencies]
astragauge-providers = { path = "../providers" }
