[package]
name = "astragauge-providers"
version = "0.1.0"
edition = "2021"

[dependencies]
astragauge-domain = { path = "../domain" }
astragauge-provider-host = { path = "../provider-host" }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
